# sensors

./: .gitignore  BACKLOG.md  CLAUDE.md  DRIVER_SPEC.md  PROJECT_NOTES.md  README.md  SPI_DRIVER_PROMOTION_PLAYBOOK.md  build-arzi.sh  build-neu.sh  build-wozi.sh  pyproject.toml  update_and_install.txt
.github/workflows/: ci.yml
html_raw/arzi/: index.html  sensorconfig.html
html_raw/wozi/: index.html  sensorconfig.html  systemledconfig.html
improved-quality/: asy_bmp3xx_driver.py  asy_fram_manager.py  asy_ntp_client.py  asy_scd30_driver.py  asy_sgp40_driver.py  asy_udp_socket.py  async_connect.py  base_classes_old.py  captive_dns.py  config_manager.py  crc_checks.py  math_helpers.py  microdot.py  neopixel_signal.py  pycheck.sh  sensortask-wozi.py  system_service.py  voc_algorithm.py
modules/: sensortask-dev.py  sensortask-wozi.py
python/CommonDrivers/: asy_udp_socket.py  async_connect.py  captive_dns.py  math_helpers.py
python/IndividualDrivers/: asy_bmp3xx_driver.py  asy_i2c_driver.py  asy_mprls_driver.py  asy_shtc3_driver.py  asy_uart.py
python/Manifest/: manifest.py
scripts/: _render_coverage.py  lint.sh  test.sh  typecheck.sh
sensors/: build-dev.sh
sensors/html_raw/arzi/: systemledconfig.html
sensors/html_raw/dev/: index.html  sensorconfig.html  systemledconfig.html
sensors/html_raw/general/: functions.js  nettimeconfig.html  style.css
sensors/html_raw/wozi/: sensorconfig.html
sensors/improved-quality/: api_helpers.py  asy_fram_driver.py  asy_fram_manager.py  asy_i2c_driver.py  asy_scd30_driver.py  asy_spi_driver.py  base_classes.py  mypy.ini  print_log.py  sensortask-wozi.py  system_service.py
sensors/modules/: _boot.py  sensortask-arzi.py  sensortask-neu.py  sensortask-wozi.py
sensors/python/CommonDrivers/: api_helpers.py  async_manager.py  system_service.py
sensors/python/IndividualDrivers/: asy_fram_driver.py  asy_fram_manager.py  asy_isl29125_driver.py  asy_scd30_driver.py  asy_spi_driver.py  asy_uart_comm.py  neopixel_signal.py
sensors/python/IndividualDrivers/asy_sgp40_driver/: __init__.py  voc_algorithm.py
src/: DRIVER_SPEC.md  README.md  asy_bmp3xx_driver.py  asy_fram_driver.py  asy_fram_manager.py  asy_i2c_driver.py  asy_scd30_driver.py  asy_sgp40_driver.py  asy_spi_driver.py  asy_uart_driver.py  asy_udp_socket.py  base_classes.py  captive_dns.py  config_manager.py  crc_checks.py  math_helpers.py  print_log.py  system_service.py  voc_algorithm.py
tests/: README.md  _coverage_runner.py  _fram_chip_fake.py  _fram_mock.py  base_classes.py  machine.py  microtest.py  test_asy_bmp3xx_driver.py  test_asy_fram_driver.py  test_asy_fram_manager.py  test_asy_i2c_driver.py  test_asy_scd30_driver.py  test_asy_sgp40_driver.py  test_asy_spi_driver.py  test_asy_uart_driver.py  test_asy_udp_socket.py  test_base_classes.py  test_captive_dns.py  test_config_manager.py  test_crc_checks.py  test_fram_integration.py  test_math_helpers.py  test_print_log.py  test_system_service.py  test_voc_algorithm.py
toolchain/: README.md  setup_toolchain.py  versions.toml
